jalv (1.6.5) unstable;

  * Support port events for ui:showInterface UIs

 -- David Robillard <d@drobilla.net>  Sun, 05 Apr 2020 07:39:19 +0000

jalv (1.6.4) stable;

  * Support rdfs:label for port groups
  * Use screen refresh rate with Gtk3 and Qt5

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:56:49 +0000

jalv (1.6.2) stable;

  * Add jalv -i option to ignore stdin for background use
  * Add several commands to console interface
  * Add support for running as an internal Jack client (thanks Timo Wischer)
  * Add support for underscore in port names on command line (thanks Jośe
    Fernando Moyano)
  * Fix Jack deactivation
  * Fix compilation with recent Gtkmm versions that require C++11
  * Fix potential crash when closed with worker (thanks JP Cimalando)
  * Fix potential hang after Ctrl-c in console interface (thanks Laxmi Devi)
  * Make Suil dependency optional
  * Remove support for deprecated event and uri-map extensions

 -- David Robillard <d@drobilla.net>  Thu, 06 Jun 2019 20:38:01 +0000

jalv (1.6.0) stable;

  * Add PortAudio backend (compile time option, audio only)
  * Add Qt5 version
  * Add command prompt to console version for changing controls
  * Add generic Qt control UI from Amadeus Folego
  * Add option to print plugin trace messages
  * Allow Jack client name to be set from command line (thanks Adam Avramov)
  * Exit GUI versions on interrupt
  * Exit on Jack shutdown (patch from Robin Gareus)
  * Fix memory error on preset save resulting in odd bundle names
  * Fix semaphore correctness issues
  * Fix unreliable UI state initialization (patch from Hanspeter Portner)
  * Improve preset support
  * Print colorful log if output is a terminal
  * Report Jack latency (patch from Robin Gareus)
  * Set Jack port order metadata
  * Support CV ports if Jack metadata is enabled (patch from Hanspeter
    Portner)
  * Support numeric and string plugin properties (event-based control)
  * Support thread-safe state restoration