@@ -21,6 +21,10 @@ Set control value (e.g. "vol=1.4").
 Dump plugin <=> UI communication.
 
 .TP
+\fB\-U URI\fR
+Load the UI with the given URI.
+
+.TP
 \fB\-g\fR, \fB\-\-generic\-ui\fR
 Use Jalv generic UI and not the plugin UI.
 
