@@ -97,6 +97,8 @@ jalv_init(int* argc, char*** argv, JalvOptions* opts)
 		  "Load state from preset", "URI" },
 		{ "dump", 'd', 0, G_OPTION_ARG_NONE, &opts->dump,
 		  "Dump plugin <=> UI communication", NULL },
+		{ "ui-uri", 'U', 0, G_OPTION_ARG_STRING, &opts->ui_uri,
+		  "Load the UI with the given URI", "URI" },
 		{ "trace", 't', 0, G_OPTION_ARG_NONE, &opts->trace,
 		  "Print trace messages from plugin", NULL },
 		{ "show-hidden", 's', 0, G_OPTION_ARG_NONE, &opts->show_hidden,
