@@ -1,8 +1,9 @@
 jalv (1.6.5) unstable;
 
   * Support port events for ui:showInterface UIs
+  * Add a command line argument to select a specific UI
 
- -- David Robillard <d@drobilla.net>  Sun, 05 Apr 2020 07:39:19 +0000
+ -- David Robillard <d@drobilla.net>  Sun, 05 Apr 2020 11:14:53 +0000
 
 jalv (1.6.4) stable;
 
